pkg/antlr/vinlang_parser.go
// Code generated from ./antlr/vinLang.g4 by ANTLR 4.9.2. DO NOT EDIT.

package parser // vinLang

import (
	"fmt"
	"reflect"
	"strconv"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = reflect.Copy
var _ = strconv.Itoa

var literalNames = []string{
	"", "'bi\u1EBFn'", "':'", "';'", "'='", "'+'", "'-'", "'*'", "", "'!'",
	"'<='", "'<'", "'>'", "'>='", "", "", "'++'", "'--'", "'{'", "'}'", "'('",
	"')'", "'l\u1EB7p'", "'ti\u1EBFp'", "'d\u1EEBng'", "'tr\u1EA3'", "'n\u1EBFu'",
	"'th\u00EC'", "'kh\u00F4ng_th\u00EC'", "'\u0111\u00FAng'", "'sai'",
}
var symbolicNames = []string{
	"", "VAR", "COLON", "SEMICOLIN", "ASSIGN", "ADD", "SUB", "MUL", "DIV",
	"NEG", "LE", "L", "G", "GE", "E", "NE", "INCREMENT", "DECREMENT", "LEFT_BRACE",
	"RIGHT_BRACE", "LEFT_PARENTHESE", "RIGHT_PARENTHESE", "FOR", "CONTINUE",
	"BREAK", "RETURN", "IF", "ELSE", "ELIF", "TRUE", "FALSE", "NUMBER", "DIGIT",
	"ID", "CHAR", "SPACE", "SequenceStatement",
}

var ruleNames = []string{
	"program", "sequenceStatement", "statement", "assign", "declaration", "forStatement",
	"boolExpression", "expression",
}

type vinLangParser struct {
	*antlr.BaseParser
}

// NewvinLangParser produces a new parser instance for the optional input antlr.TokenStream.
//
// The *vinLangParser instance produced may be reused by calling the SetInputStream method.
// The initial parser configuration is expensive to construct, and the object is not thread-safe;
// however, if used within a Golang sync.Pool, the construction cost amortizes well and the
// objects can be used in a thread-safe manner.
func NewvinLangParser(input antlr.TokenStream) *vinLangParser {
	this := new(vinLangParser)
	deserializer := antlr.NewATNDeserializer(nil)
	deserializedATN := deserializer.DeserializeFromUInt16(parserATN)
	decisionToDFA := make([]*antlr.DFA, len(deserializedATN.DecisionToState))
	for index, ds := range deserializedATN.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(ds, index)
	}
	this.BaseParser = antlr.NewBaseParser(input)

	this.Interpreter = antlr.NewParserATNSimulator(this, deserializedATN, decisionToDFA, antlr.NewPredictionContextCache())
	this.RuleNames = ruleNames
	this.LiteralNames = literalNames
	this.SymbolicNames = symbolicNames
	this.GrammarFileName = "vinLang.g4"

	return this
}

// vinLangParser tokens.
const (
	vinLangParserEOF               = antlr.TokenEOF
	vinLangParserVAR               = 1
	vinLangParserCOLON             = 2
	vinLangParserSEMICOLIN         = 3
	vinLangParserASSIGN            = 4
	vinLangParserADD               = 5
	vinLangParserSUB               = 6
	vinLangParserMUL               = 7
	vinLangParserDIV               = 8
	vinLangParserNEG               = 9
	vinLangParserLE                = 10
	vinLangParserL                 = 11
	vinLangParserG                 = 12
	vinLangParserGE                = 13
	vinLangParserE                 = 14
	vinLangParserNE                = 15
	vinLangParserINCREMENT         = 16
	vinLangParserDECREMENT         = 17
	vinLangParserLEFT_BRACE        = 18
	vinLangParserRIGHT_BRACE       = 19
	vinLangParserLEFT_PARENTHESE   = 20
	vinLangParserRIGHT_PARENTHESE  = 21
	vinLangParserFOR               = 22
	vinLangParserCONTINUE          = 23
	vinLangParserBREAK             = 24
	vinLangParserRETURN            = 25
	vinLangParserIF                = 26
	vinLangParserELSE              = 27
	vinLangParserELIF              = 28
	vinLangParserTRUE              = 29
	vinLangParserFALSE             = 30
	vinLangParserNUMBER            = 31
	vinLangParserDIGIT             = 32
	vinLangParserID                = 33
	vinLangParserCHAR              = 34
	vinLangParserSPACE             = 35
	vinLangParserSequenceStatement = 36
)

// vinLangParser rules.
const (
	vinLangParserRULE_program           = 0
	vinLangParserRULE_sequenceStatement = 1
	vinLangParserRULE_statement         = 2
	vinLangParserRULE_assign            = 3
	vinLangParserRULE_declaration       = 4
	vinLangParserRULE_forStatement      = 5
	vinLangParserRULE_boolExpression    = 6
	vinLangParserRULE_expression        = 7
)

// IProgramContext is an interface to support dynamic dispatch.
type IProgramContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsProgramContext differentiates from other interfaces.
	IsProgramContext()
}

type ProgramContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyProgramContext() *ProgramContext {
	var p = new(ProgramContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = vinLangParserRULE_program
	return p
}

func (*ProgramContext) IsProgramContext() {}

func NewProgramContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ProgramContext {
	var p = new(ProgramContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = vinLangParserRULE_program

	return p
}

func (s *ProgramContext) GetParser() antlr.Parser { return s.parser }

func (s *ProgramContext) SequenceStatement() ISequenceStatementContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ISequenceStatementContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ISequenceStatementContext)
}

func (s *ProgramContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ProgramContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ProgramContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(vinLangListener); ok {
		listenerT.EnterProgram(s)
	}
}

func (s *ProgramContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(vinLangListener); ok {
		listenerT.ExitProgram(s)
	}
}

func (p *vinLangParser) Program() (localctx IProgramContext) {
	localctx = NewProgramContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, vinLangParserRULE_program)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(16)
		p.SequenceStatement()
	}

	return localctx
}

// ISequenceStatementContext is an interface to support dynamic dispatch.
type ISequenceStatementContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsSequenceStatementContext differentiates from other interfaces.
	IsSequenceStatementContext()
}

type SequenceStatementContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptySequenceStatementContext() *SequenceStatementContext {
	var p = new(SequenceStatementContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = vinLangParserRULE_sequenceStatement
	return p
}

func (*SequenceStatementContext) IsSequenceStatementContext() {}

func NewSequenceStatementContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *SequenceStatementContext {
	var p = new(SequenceStatementContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = vinLangParserRULE_sequenceStatement

	return p
}

func (s *SequenceStatementContext) GetParser() antlr.Parser { return s.parser }

func (s *SequenceStatementContext) AllStatement() []IStatementContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IStatementContext)(nil)).Elem())
	var tst = make([]IStatementContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IStatementContext)
		}
	}

	return tst
}

func (s *SequenceStatementContext) Statement(i int) IStatementContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IStatementContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IStatementContext)
}

func (s *SequenceStatementContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *SequenceStatementContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *SequenceStatementContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(vinLangListener); ok {
		listenerT.EnterSequenceStatement(s)
	}
}

func (s *SequenceStatementContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(vinLangListener); ok {
		listenerT.ExitSequenceStatement(s)
	}
}

func (p *vinLangParser) SequenceStatement() (localctx ISequenceStatementContext) {
	localctx = NewSequenceStatementContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, vinLangParserRULE_sequenceStatement)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(18)
		p.Statement()
	}
	p.SetState(22)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for (((_la)&-(0x1f+1)) == 0 && ((1<<uint(_la))&((1<<vinLangParserVAR)|(1<<vinLangParserLEFT_BRACE)|(1<<vinLangParserFOR))) != 0) || _la == vinLangParserID {
		{
			p.SetState(19)
			p.Statement()
		}

		p.SetState(24)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}

	return localctx
}

// IStatementContext is an interface to support dynamic dispatch.
type IStatementContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsStatementContext differentiates from other interfaces.
	IsStatementContext()
}

type StatementContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyStatementContext() *StatementContext {
	var p = new(StatementContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = vinLangParserRULE_statement
	return p
}

func (*StatementContext) IsStatementContext() {}

func NewStatementContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *StatementContext {
	var p = new(StatementContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = vinLangParserRULE_statement

	return p
}

func (s *StatementContext) GetParser() antlr.Parser { return s.parser }

func (s *StatementContext) Declaration() IDeclarationContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IDeclarationContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IDeclarationContext)
}

func (s *StatementContext) SEMICOLIN() antlr.TerminalNode {
	return s.GetToken(vinLangParserSEMICOLIN, 0)
}

func (s *StatementContext) ForStatement() IForStatementContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IForStatementContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IForStatementContext)
}

func (s *StatementContext) Assign() IAssignContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IAssignContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IAssignContext)
}

func (s *StatementContext) LEFT_BRACE() antlr.TerminalNode {
	return s.GetToken(vinLangParserLEFT_BRACE, 0)
}

func (s *StatementContext) SequenceStatement() ISequenceStatementContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ISequenceStatementContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ISequenceStatementContext)
}

func (s *StatementContext) RIGHT_BRACE() antlr.TerminalNode {
	return s.GetToken(vinLangParserRIGHT_BRACE, 0)
}

func (s *StatementContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *StatementContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *StatementContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(vinLangListener); ok {
		listenerT.EnterStatement(s)
	}
}

func (s *StatementContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(vinLangListener); ok {
		listenerT.ExitStatement(s)
	}
}

func (p *vinLangParser) Statement() (localctx IStatementContext) {
	localctx = NewStatementContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, vinLangParserRULE_statement)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(36)
	p.GetErrorHandler().Sync(p)

	switch p.GetTokenStream().LA(1) {
	case vinLangParserVAR:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(25)
			p.Declaration()
		}
		{
			p.SetState(26)
			p.Match(vinLangParserSEMICOLIN)
		}

	case vinLangParserFOR:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(28)
			p.ForStatement()
		}

	case vinLangParserID:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(29)
			p.Assign()
		}
		{
			p.SetState(30)
			p.Match(vinLangParserSEMICOLIN)
		}

	case vinLangParserLEFT_BRACE:
		p.EnterOuterAlt(localctx, 4)
		{
			p.SetState(32)
			p.Match(vinLangParserLEFT_BRACE)
		}
		{
			p.SetState(33)
			p.SequenceStatement()
		}
		{
			p.SetState(34)
			p.Match(vinLangParserRIGHT_BRACE)
		}

	default:
		panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
	}

	return localctx
}

// IAssignContext is an interface to support dynamic dispatch.
type IAssignContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsAssignContext differentiates from other interfaces.
	IsAssignContext()
}

type AssignContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyAssignContext() *AssignContext {
	var p = new(AssignContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = vinLangParserRULE_assign
	return p
}

func (*AssignContext) IsAssignContext() {}

func NewAssignContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *AssignContext {
	var p = new(AssignContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = vinLangParserRULE_assign

	return p
}

func (s *AssignContext) GetParser() antlr.Parser { return s.parser }

func (s *AssignContext) ID() antlr.TerminalNode {
	return s.GetToken(vinLangParserID, 0)
}

func (s *AssignContext) ASSIGN() antlr.TerminalNode {
	return s.GetToken(vinLangParserASSIGN, 0)
}

func (s *AssignContext) Expression() IExpressionContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IExpressionContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IExpressionContext)
}

func (s *AssignContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *AssignContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *AssignContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(vinLangListener); ok {
		listenerT.EnterAssign(s)
	}
}

func (s *AssignContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(vinLangListener); ok {
		listenerT.ExitAssign(s)
	}
}

func (p *vinLangParser) Assign() (localctx IAssignContext) {
	localctx = NewAssignContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, vinLangParserRULE_assign)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(38)
		p.Match(vinLangParserID)
	}
	{
		p.SetState(39)
		p.Match(vinLangParserASSIGN)
	}
	{
		p.SetState(40)
		p.expression(0)
	}

	return localctx
}

// IDeclarationContext is an interface to support dynamic dispatch.
type IDeclarationContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsDeclarationContext differentiates from other interfaces.
	IsDeclarationContext()
}

type DeclarationContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyDeclarationContext() *DeclarationContext {
	var p = new(DeclarationContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = vinLangParserRULE_declaration
	return p
}

func (*DeclarationContext) IsDeclarationContext() {}

func NewDeclarationContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *DeclarationContext {
	var p = new(DeclarationContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = vinLangParserRULE_declaration

	return p
}

func (s *DeclarationContext) GetParser() antlr.Parser { return s.parser }

func (s *DeclarationContext) VAR() antlr.TerminalNode {
	return s.GetToken(vinLangParserVAR, 0)
}

func (s *DeclarationContext) AllID() []antlr.TerminalNode {
	return s.GetTokens(vinLangParserID)
}

func (s *DeclarationContext) ID(i int) antlr.TerminalNode {
	return s.GetToken(vinLangParserID, i)
}

func (s *DeclarationContext) COLON() antlr.TerminalNode {
	return s.GetToken(vinLangParserCOLON, 0)
}

func (s *DeclarationContext) AllASSIGN() []antlr.TerminalNode {
	return s.GetTokens(vinLangParserASSIGN)
}

func (s *DeclarationContext) ASSIGN(i int) antlr.TerminalNode {
	return s.GetToken(vinLangParserASSIGN, i)
}

func (s *DeclarationContext) AllExpression() []IExpressionContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IExpressionContext)(nil)).Elem())
	var tst = make([]IExpressionContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IExpressionContext)
		}
	}

	return tst
}

func (s *DeclarationContext) Expression(i int) IExpressionContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IExpressionContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IExpressionContext)
}

func (s *DeclarationContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *DeclarationContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *DeclarationContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(vinLangListener); ok {
		listenerT.EnterDeclaration(s)
	}
}

func (s *DeclarationContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(vinLangListener); ok {
		listenerT.ExitDeclaration(s)
	}
}

func (p *vinLangParser) Declaration() (localctx IDeclarationContext) {
	localctx = NewDeclarationContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, vinLangParserRULE_declaration)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(42)
		p.Match(vinLangParserVAR)
	}
	{
		p.SetState(43)
		p.Match(vinLangParserID)
	}
	{
		p.SetState(44)
		p.Match(vinLangParserCOLON)
	}
	{
		p.SetState(45)
		p.Match(vinLangParserID)
	}
	p.SetState(50)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for _la == vinLangParserASSIGN {
		{
			p.SetState(46)
			p.Match(vinLangParserASSIGN)
		}
		{
			p.SetState(47)
			p.expression(0)
		}

		p.SetState(52)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}

	return localctx
}

// IForStatementContext is an interface to support dynamic dispatch.
type IForStatementContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsForStatementContext differentiates from other interfaces.
	IsForStatementContext()
}

type ForStatementContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyForStatementContext() *ForStatementContext {
	var p = new(ForStatementContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = vinLangParserRULE_forStatement
	return p
}

func (*ForStatementContext) IsForStatementContext() {}

func NewForStatementContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ForStatementContext {
	var p = new(ForStatementContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = vinLangParserRULE_forStatement

	return p
}

func (s *ForStatementContext) GetParser() antlr.Parser { return s.parser }

func (s *ForStatementContext) FOR() antlr.TerminalNode {
	return s.GetToken(vinLangParserFOR, 0)
}

func (s *ForStatementContext) LEFT_PARENTHESE() antlr.TerminalNode {
	return s.GetToken(vinLangParserLEFT_PARENTHESE, 0)
}

func (s *ForStatementContext) Declaration() IDeclarationContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IDeclarationContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IDeclarationContext)
}

func (s *ForStatementContext) AllSEMICOLIN() []antlr.TerminalNode {
	return s.GetTokens(vinLangParserSEMICOLIN)
}

func (s *ForStatementContext) SEMICOLIN(i int) antlr.TerminalNode {
	return s.GetToken(vinLangParserSEMICOLIN, i)
}

func (s *ForStatementContext) BoolExpression() IBoolExpressionContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IBoolExpressionContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IBoolExpressionContext)
}

func (s *ForStatementContext) Assign() IAssignContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IAssignContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IAssignContext)
}

func (s *ForStatementContext) RIGHT_PARENTHESE() antlr.TerminalNode {
	return s.GetToken(vinLangParserRIGHT_PARENTHESE, 0)
}

func (s *ForStatementContext) Statement() IStatementContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IStatementContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IStatementContext)
}

func (s *ForStatementContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ForStatementContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ForStatementContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(vinLangListener); ok {
		listenerT.EnterForStatement(s)
	}
}

func (s *ForStatementContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(vinLangListener); ok {
		listenerT.ExitForStatement(s)
	}
}

func (p *vinLangParser) ForStatement() (localctx IForStatementContext) {
	localctx = NewForStatementContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 10, vinLangParserRULE_forStatement)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(53)
		p.Match(vinLangParserFOR)
	}
	{
		p.SetState(54)
		p.Match(vinLangParserLEFT_PARENTHESE)
	}
	{
		p.SetState(55)
		p.Declaration()
	}
	{
		p.SetState(56)
		p.Match(vinLangParserSEMICOLIN)
	}
	{
		p.SetState(57)
		p.BoolExpression()
	}
	{
		p.SetState(58)
		p.Match(vinLangParserSEMICOLIN)
	}
	{
		p.SetState(59)
		p.Assign()
	}
	{
		p.SetState(60)
		p.Match(vinLangParserRIGHT_PARENTHESE)
	}
	{
		p.SetState(61)
		p.Statement()
	}

	return localctx
}

// IBoolExpressionContext is an interface to support dynamic dispatch.
type IBoolExpressionContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsBoolExpressionContext differentiates from other interfaces.
	IsBoolExpressionContext()
}

type BoolExpressionContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyBoolExpressionContext() *BoolExpressionContext {
	var p = new(BoolExpressionContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = vinLangParserRULE_boolExpression
	return p
}

func (*BoolExpressionContext) IsBoolExpressionContext() {}

func NewBoolExpressionContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *BoolExpressionContext {
	var p = new(BoolExpressionContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = vinLangParserRULE_boolExpression

	return p
}

func (s *BoolExpressionContext) GetParser() antlr.Parser { return s.parser }

func (s *BoolExpressionContext) TRUE() antlr.TerminalNode {
	return s.GetToken(vinLangParserTRUE, 0)
}

func (s *BoolExpressionContext) FALSE() antlr.TerminalNode {
	return s.GetToken(vinLangParserFALSE, 0)
}

func (s *BoolExpressionContext) AllExpression() []IExpressionContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IExpressionContext)(nil)).Elem())
	var tst = make([]IExpressionContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IExpressionContext)
		}
	}

	return tst
}

func (s *BoolExpressionContext) Expression(i int) IExpressionContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IExpressionContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IExpressionContext)
}

func (s *BoolExpressionContext) E() antlr.TerminalNode {
	return s.GetToken(vinLangParserE, 0)
}

func (s *BoolExpressionContext) G() antlr.TerminalNode {
	return s.GetToken(vinLangParserG, 0)
}

func (s *BoolExpressionContext) L() antlr.TerminalNode {
	return s.GetToken(vinLangParserL, 0)
}

func (s *BoolExpressionContext) LE() antlr.TerminalNode {
	return s.GetToken(vinLangParserLE, 0)
}

func (s *BoolExpressionContext) GE() antlr.TerminalNode {
	return s.GetToken(vinLangParserGE, 0)
}

func (s *BoolExpressionContext) NE() antlr.TerminalNode {
	return s.GetToken(vinLangParserNE, 0)
}

func (s *BoolExpressionContext) NEG() antlr.TerminalNode {
	return s.GetToken(vinLangParserNEG, 0)
}

func (s *BoolExpressionContext) BoolExpression() IBoolExpressionContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IBoolExpressionContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IBoolExpressionContext)
}

func (s *BoolExpressionContext) LEFT_PARENTHESE() antlr.TerminalNode {
	return s.GetToken(vinLangParserLEFT_PARENTHESE, 0)
}

func (s *BoolExpressionContext) RIGHT_PARENTHESE() antlr.TerminalNode {
	return s.GetToken(vinLangParserRIGHT_PARENTHESE, 0)
}

func (s *BoolExpressionContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *BoolExpressionContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}
